tests/baselines/reference/compoundAdditionAssignmentWithInvalidOperands.errors.txt
==== tests/cases/compiler/compoundAdditionAssignmentWithInvalidOperands.ts (27 errors) ====
    enum E { a, b }
    
    var a: void;
    
    var x1: boolean;
    x1 += a;
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x1 += true;
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x1 += 0;
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x1 += E.a;
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x1 += {};
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x1 += null;
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x1 += undefined;
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    
    var x2: {};
    x2 += a;
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x2 += true;
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x2 += 0;
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x2 += E.a;
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x2 += {};
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x2 += null;
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x2 += undefined;
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    
    var x3: void;
    x3 += a;
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x3 += true;
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x3 += 0;
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x3 += E.a;
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x3 += {};
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x3 += null;
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x3 += undefined;
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    
    var x4: number;
    x4 += a;
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x4 += true;
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x4 += {};
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    
    var x5: E;
    x5 += a;
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x5 += true;
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x5 += {};
    ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.